# nus_hackathon_project

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  main.py  makefile  pyproject.toml  test_api.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0007.5_create_community_tables.py  0007_add_user_role.py  0007_create_community_tables.py  0008_add_community_groups.py  0009_add_health_worker_training_meeting_cert_tables.py  0010_add_role_to_users.py  0011_health_worker_community_fk.py  0012_add_icbt_community_and_user_progress.py  0013_add_anonymous_username_to_users.py  0014_add_chat_tables.py  0014_add_photo_url_to_health_workers.py  0015_add_worker_profile_fields.py  0016_add_community_problems.py  0017_direct_messages.py  0018_community_group_memberships.py  (+4 more)
backend/: main.py
docs/: api_docs.md  chat_mock_frontend_handoff.md
frontend/: .env.development  .env.development.example  .env.example  .eslintrc.cjs  .prettierrc  FRONTEND.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
postgres/: init.sql
scripts/: docker-backend-entrypoint.sh  integration_chat_e2e.py  mock_nepali_chat_demo.py  reset_and_seed.sh  seed_all.py  seed_anonymous_problems.py  seed_community.py  seed_community_problems.py  seed_demo_data.py  seed_health_workers.py  seed_icbt_programs.py  seed_meetings.py  seed_problem_upvotes.py  seed_training.py  seed_training_programs.py  seed_users.py  seed_worker_photos.py  test_api.sh
tests/: test_chat_mock_nepali.py
(+123 files in other folders)
