[project]
name = "nus-hackathon-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "minio>=7.2.20",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
